--- a/Rabbit.html
+++ b/Rabbit.html
@@ -37,6 +37,34 @@
     <h2>Songs</h2>
 
     <p>Little Bunny Foo Foo, <br> I don't want to see you <br> scooping up the field mice <br> and bopping them on the head!</p>
+    <h3>Trzy ciekawe gatunki królika</h3>
+    <table>
+        <thead>
+            <tr>
+                <th>nazwa</th>
+                <th>wielkość</th>
+                <th>pochodzenie</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>holland loop</td>
+                <td>malutki</td>
+                <td>Holandia</td>
+            </tr>
+            <tr>
+                <td>Belgijski olbrzym</td>
+                <td>ogromny</td>
+                <td>Belgia</td>
+            </tr>
+            <tr>
+                <td>królik reks</td>
+                <td>mały</td>
+                <td>Francja</td>
+            </tr>
+
+        </tbody>
+    </table>
 
 </body>
 
