Added js sources

--- a/recips.html
+++ b/recips.html
@@ -3,14 +3,12 @@
 <head>
     <title>Project: Recipe book</title>
     <meta charset="utf-8">
-    <style>
-
-    </style>
+    <link rel="stylesheet" href="./recips.css">
 </head>
 
 <body>
 
-    <h1>Ulubione wiosenne przepisy Agi</h1>
+    <h1 class="recips">Ulubione wiosenne przepisy Agi</h1>
 
     <h2>Spis treści:</h2>
 
@@ -18,6 +16,7 @@
         <li><a href="#recipe1">Przepis 1</a></li>
         <li> <a href="#recipe2">Przepis 2</a></li>
         <li> <a href="#recipe3">Przepis 3</a></li>
+        <li><a href="#recipe4">Przepis 4 </a></li>
     </ol>
 
     <h3 id="recipe1">Przepis 1</h3>
@@ -149,7 +148,7 @@
                 <td> pół kg</td>
         </tbody>
     </table>
-
+    <h3 id="recipe4">Przepis 4</h3>
 </body>
 
 </html>
